Fix alignment of event overlay under certain scenarios.

--- a/css/library.css
+++ b/css/library.css
@@ -5579,13 +5579,15 @@ div:has(>._1J21tLst5SEhBPkVRT53UV) {
   gap: var(--zehn-size-gap-small) !important;
 }
 
-._1HS4twEHtDJ_8MWgJT4VBd {
+._1HS4twEHtDJ_8MWgJT4VBd, ._1HS4twEHtDJ_8MWgJT4VBd._3-M9bcTzYOSRoajtIRDbka {
   margin: 0!important;
   padding: 0 8px !important;
   height: 24px !important;
   line-height: 24px !important;
   border: unset !important;
   color: var(--zehn-color-text-primary) !important;
+  font-size: var(--zehn-size-14) !important;
+  font-weight: var(--zehn-size-weight-normal) !important;
   background-color: var(--zehn-color-acrylic) !important;
   backdrop-filter: blur(var(--zehn-blur-radius)) !important;
   background-blend-mode: exclusion !important;
@@ -12357,13 +12359,21 @@ button._1iFnR7cGRa1kepep433pGx svg * {
 }
 
 /* DOWNLOADS PAGE */
-._2Nq6ov7A1hGcHXVOXNt_OE:has(._1bq4x9pa4-9RLY-dXWUZTp) ._2pA5CW91XQQDfo6yZEdPd- {
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnDownloadsOpened) ._2pA5CW91XQQDfo6yZEdPd- {
   top: calc(var(--zehn-navbar-margin) + 200px + 16px) !important;
 }
 
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnMenuOpened.ZehnDownloadsOpened) ._2pA5CW91XQQDfo6yZEdPd- {
+  top: calc(var(--zehn-navbar-margin) + var(--zehn-menu-margin) + 200px + 16px) !important;
+}
+
 /* STICKY HEADER */
-._2Nq6ov7A1hGcHXVOXNt_OE:has(.jnXtv79jL6SXXwlJYPtQz._39RheXihcN6H2k2muQTjkI) ._2pA5CW91XQQDfo6yZEdPd- {
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnStickyHeader) ._2pA5CW91XQQDfo6yZEdPd- {
   top: calc(var(--zehn-navbar-margin) + 48px + 16px) !important;
+}
+
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnMenuOpened.ZehnStickyHeader) ._2pA5CW91XQQDfo6yZEdPd- {
+  top: calc(var(--zehn-navbar-margin) + var(--zehn-menu-margin) + 48px + 16px) !important;
 }
 
 ._2pA5CW91XQQDfo6yZEdPd- ._3yfs7fc5WEv6F9tPG4yq4g {
@@ -12499,17 +12509,29 @@ button._1iFnR7cGRa1kepep433pGx svg * {
   flex-direction: column !important;
 }
 
-/* DOWNLOADS PAGE */
-._3CJsgSK-y815Zeoe6bz6dh {
+/* DOWNLOADS PAGE OPENED */
+._37MAYpIjl0IDA1xVhhsuX8 {
+  z-index: 9 !important;
+}
+
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnMenuOpened) ._3CJsgSK-y815Zeoe6bz6dh {
+  top: var(--zehn-menu-margin) !important;
+}
+
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnDownloadsOpened) ._3CJsgSK-y815Zeoe6bz6dh {
   top: var(--zehn-downloads-top) !important;
 }
 
-._2Nq6ov7A1hGcHXVOXNt_OE:has(._1bq4x9pa4-9RLY-dXWUZTp) ._3GCEyyVil-cCS-8hoI2Zo1 {
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnMenuOpened.ZehnDownloadsOpened) ._3CJsgSK-y815Zeoe6bz6dh {
+  top: calc(var(--zehn-downloads-top) + var(--zehn-menu-margin)) !important;
+}
+
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnDownloadsOpened) ._3GCEyyVil-cCS-8hoI2Zo1 {
   padding: calc(var(--zehn-navbar-margin) + var(--zehn-downloads-margin) + 16px) 0 16px !important;
 }
 
 /* STICKY HEADER */
-._2Nq6ov7A1hGcHXVOXNt_OE:has(.jnXtv79jL6SXXwlJYPtQz._39RheXihcN6H2k2muQTjkI) ._3GCEyyVil-cCS-8hoI2Zo1 {
+._3mz8wQ6Q44B8P7pzPP4Iyw:has(.ZehnStickyHeader) ._3GCEyyVil-cCS-8hoI2Zo1 {
   margin: 0 auto 0 !important;
   padding: calc(var(--zehn-navbar-margin) + 48px + 16px) 0 16px !important;
 }
